Fix link z-index.

--- a/app/assets/stylesheets/post.scss
+++ b/app/assets/stylesheets/post.scss
@@ -2,6 +2,7 @@
   color: $default;
   position: fixed;
   margin-top: 2%;
+  z-index: 1;
 
   &:hover {
    color: $dark-default;
